# otus-homework7

./: CMakeLists.txt  conanfile.py  main.cpp
.github/workflows/: release.yml
src/: CMakeLists.txt  context.cpp  context.h  main.cpp  state.cpp  state.h
tests/: CMakeLists.txt  tests.cpp
